data/all_generated_tests/raw_wast_tests/block_UnreachableCodeExecution_1971.wast
;; 2. **Mismatched Stack State Prior to Unreachable in a Block**:    - Design a `block` where the expected stack state before encountering the `unreachable` instruction does not match due to a branch instruction. This will test if the context handles stack manipulations correctly and prevents reaching an `unreachable` instruction unexpectedly.

(assert_invalid
  (module (func $mismatch-stack-before-unreachable
    (block (result i32)
      (br 0 (i32.const 42))
      unreachable
    )
  ))
  "type mismatch"
)